# agentics

./: .env.example  README.md  WORKPLAN.md  demo_configuration.py  demo_safe_calculator.py  pyproject.toml  requirements.txt  simplest_agent.py  test_comprehensive_error_handling.py  test_configuration.py  test_health_checker.py  test_retry_mechanisms.py  test_safe_calculator.py
.github/: copilot-instructions.md  memory.instructions.md
.github/instructions/: memory.instructions.md
.github/prompts/: commit.prompt.md  memorize.prompt.md
agentics/: __init__.py
agentics/config/: __init__.py  settings.py
agentics/error_handling/: __init__.py  exceptions.py  handlers.py  resilience.py
agentics/tools/: __init__.py  base.py  calculator.py
notes/: FEATURES_WORKPLAN.md  MODERNIZATION_WORKPLAN.md  TASK_1_1_SUMMARY.md  TASK_2_2_SUMMARY.md  agentic-dev-guide.md  llm-agent-guide.md
notes/01_initial-refactor/: TASK_2_1_SUMMARY.md  TASK_4_1_SUMMARY.md
notes/02_modernization-refactor/: MODERNIZATION_WORKPLAN.md  PHASE_2_MODULARIZATION_WORKPLAN.md  TASK_2_1_ANALYSIS.md
scripts/: dev-helpers.sh  test_runner.sh
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: __init__.py  test_health_monitoring.py
tests/unit/: __init__.py  test_calculator.py  test_config.py  test_error_handling.py  test_retry_mechanisms.py
